# minimal-presentations

./: BiGradedMatrix.py  BiGradedMatrix_v2.py  FIRep_v2.py  FIRep_v3.py  KerBetti.py  MinimalPres_v1.py  MinimalPres_v2.py  ReadingRivet_v2.py  bifiltration_random100_1.txt  function_Rips.py  function_Rips_example.py  jun8_MinimizePres_example.py  may13_comparing_with_rivet.ipynb  may14_comparing_with_rivet.py  may21_comparing_with_rivet.py  rivet_random100_1.txt  testing_mpfree.py  testing_mpfree_example.py
c_plus_plus/: CMakeLists.txt  GradedMatrix.h  GradedMatrix_with_column_reader_july_2.h  compare.sh  firep.txt  instance.sh  instance_100000_simplices.txt  instance_10000_simplices.txt  instance_50000_simplices.txt  main.cpp  rivet_instance.sh  run_benchmarks.sh  run_benchmarks_1.sh  run_benchmarks_2.sh  run_benchmarks_3.sh  run_benchmarks_4.sh  run_benchmarks_5.sh  run_benchmarks_6.sh  run_benchmarks_7.sh  run_benchmarks_8.sh  test_columns.sh
c_plus_plus/phat_mod/: CMakeLists.txt  mumford_swap_twist
c_plus_plus/phat_mod/include/phat/: boundary_matrix.h
c_plus_plus/phat_mod/include/phat/algorithms/: swap_reduction.h  swap_twist_reduction.h
c_plus_plus/phat_mod/include/phat/representations/: Pivot_representation.h  Uniform_representation.h  heap_column_rep.h  heap_column_rep.h~  vector_column_rep.h
c_plus_plus/phat_mod/src/: benchmark.cpp~  self_test.cpp~
create_mesh_firep/: CMakeLists.txt  main.cpp  points_inside_sphere.cpp  points_on_sphere.cpp
off_to_firep/: CMakeLists.txt  off_to_firep.cpp
